build_error.txt
    Checking rust-ltfs-git v0.1.0 (D:\Rumba)
warning: unused import: `std::fs::File`
 --> src\tape.rs:2:5
  |
2 | use std::fs::File;
  |     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::path::Path`
 --> src\tape.rs:3:5
  |
3 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Database: Clone` is not satisfied
  --> src\db.rs:15:5
   |
13 | #[derive(Clone)]
   |          ----- in this derive macro expansion
14 | pub struct BackupDb {
15 |     db: Database,
   |     ^^^^^^^^^^^^ the trait `Clone` is not implemented for `Database`

For more information about this error, try `rustc --explain E0277`.
warning: `rust-ltfs-git` (bin "rust-ltfs-git") generated 2 warnings
error: could not compile `rust-ltfs-git` (bin "rust-ltfs-git") due to 1 previous error; 2 warnings emitted
